added more cases